--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>My First Website</title>
 </head>
 <body>
-  <body style="background-color: red;">
+  <body style="background-color: lightblue;">
   <h1>Hello World!</h1>
   <p>This is my GitHub Page.</p>
 </body>
