--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   <h1>Hello World!</h1>
   <p>This is my GitHub Page.</p>
 </body>
-<img src="logo.png" alt="AccuSentry Logo" style="height: 100px;">
+<img src="logo.png" alt="Logo" style="height: 100px;">
 </html>
