--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <h1>Hello World!</h1>
   <p>This is my GitHub Page.</p>
 </body>
-<img src="logo.png" alt="Logo" style="height: 100px;">
+<!--<img src="logo.png" alt="Logo" style="height: 100px;"> -->
+<img src="logo.png" alt="Logo" style="height: 100px; float: right;">
 </html>
