--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <h1>Hello World!</h1>
   <p>This is my GitHub Page.</p>
 </body>
-<img src="logo.png" alt="Logo" style="height: 100px; float: right;">
+<div style="position: relative; height: 300px;">
+  <img src="logo.png" alt="Logo" style="position: absolute; top: 50px; left: 100px; height: 100px;">
+</div>
 </html>
