--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My First Website</title>
+  <title>My First Very Website</title>
 </head>
 <body>
   <body style="background-color: blue;">
