--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First Very Website</title>
+  <meta charset="UTF-8">
+  <title>SentryVerse</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #121212; /* dark mode background */
+      color: #f1f1f1;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: center;
+    }
+
+    header {
+      position: relative;
+      padding: 20px;
+    }
+
+    .logo {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      height: 60px;
+    }
+
+    h1 {
+      font-size: 3rem;
+      margin: 50px 0 10px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+  </style>
 </head>
 <body>
-  <body style="background-color: blue;">
-  <h1>Hello World!</h1>
+  <header>
+    <img src="logo.png" alt="Logo" class="logo">
+    <h1>SentryVerse</h1>
+  </header>
   <p>This is my GitHub Page.</p>
 </body>
-<div style="position: relative; height: 50px;">
-  <img src="logo.png" alt="Logo" style="position: absolute; top: 50px; left: 10px; height: 100px;">
-</div>
 </html>
