--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <img src="logo.png" alt="Logo" class="logo">
     <h1>SentryVerse</h1>
   </header>
-  <p>This is my GitHub Page.</p>
+  <p>Otx/Stx</p>
 </body>
 </html>
