--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <img src="logo.png" alt="Logo" class="logo">
     <h1>SentryVerse</h1>
 <div style="position: relative; height: 50px;">
-  <img src="Otx.png" alt="Logo" style="position: absolute; top: 50px; left: 10px; height: 100px;">
+  <img src="Otx.PNG" alt="Logo" style="position: absolute; top: 50px; left: 10px; height: 100px;">
   </header>
   <p>Otx/Stx</p>
 </body>
