--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <h1>SentryVerse</h1>
 <div style="position: relative; height: 50px;">
   <img src="Otx.PNG" alt="Logo" style="position: absolute; top: 150px; left: 30px; height: 400px;">
+  <div style="position: relative; height: 50px;">
+  <img src="Target.png" alt="Logo" style="position: absolute; top: 150px; left: 30px; height: 400px;">
   </header>
   <p>Otx/Stx</p>
 </body>
