--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     .otx-img {
       height: 500px;
-      margin: 30px
+      position: relative; /* enables 'left' to work */
+      left: 100px;
       margin-top: 30px; /* 👈 spacing before image */
     }
 
