--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <img src="logo.png" alt="Logo" class="logo">
     <h1>SentryVerse</h1>
   </header>
-
+  <p>OTx/STx</p>
   <!-- Content Section -->
   <img src="Otx.PNG" alt="Otx Image" class="otx-img">
   <p>OTx/STx</p>
