--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </header>
   <p>OTx/STx</p>
   <!-- Content Section -->
-  <img src="Otx.PNG" alt="Otx Image" class="otx-img">
+  <img src="Core Centerline.jpg" alt="Otx Image" class="otx-img">
   <p>OTx/STx</p>
 </body>
 </html>
