--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     h1 {
       font-size: 4rem;
+      margin-top: 100px; /* 👈 this pushes it down */
       margin-bottom: 30px; /* 👈 spacing between title and next section */
     }
 
