--- a/index.html
+++ b/index.html
@@ -55,5 +55,9 @@
   <img src="Core Centerline.jpg" alt="Otx Image" class="otx-img">
   <p>OTx/STx</p>
 </body>
+  <section style="height: 800px;">
+  <h2>More Info</h2>
+  <p>This adds height and enables scrolling.</p>
+</section>
 </html>
 
